# RUSSIAN_HISTORY_PROJECT_1

./: .dockerignore  .gitignore  Dates, History project.docx  Dockerfile  README.md  docker-compose.yml  events.db  fill_db.py  fill_main_dates.py  fill_sources.py  pyproject.toml
src/: data_handlers.py  fill_db.py  handlers.py  keyboards.py  run.py
src/russian_history_project_1/: config.py  db.py  main.py
src/russian_history_project_1/handlers/: __init__.py  events.py  fallback.py  navigation.py  start.py
src/russian_history_project_1/keyboards/: common.py
src/russian_history_project_1/utils/: messaging.py
